LOGCXX-167: Examples and unit tests do not call setlocale