examples/console.cpp
@@ -21,6 +21,7 @@
 #include <log4cxx/simplelayout.h>
 #include <log4cxx/logmanager.h>
 #include <iostream>
+#include <locale.h>
 
 using namespace log4cxx;
 using namespace log4cxx::helpers;
@@ -52,6 +53,7 @@ static void configure(bool err) {
  */
 int main(int argc, char** argv)
 {
+    setlocale(LC_ALL, "");
     if (argc <= 1) {
         puts("Console test program\nUsage: console [-err] [ puts | putws | cout | wcout | configure | log | wide | byte ]*\n");  
     }
